implement getById, deleteById REST methods, add exception handling
